--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 
 			<div class="hden-flow-step hden-step-02">
 				<div class="hden-step-num">02</div>
-				<div class="hden-step-text">ヒアリング<br><span class="hden-step-note">（対象人数・活用目的など）</span></div>
+				<div class="hden-step-text one">ヒアリング<br><span class="hden-step-note">（対象人数・活用目的など）</span></div>
 				<div class="hden-step-icon">
 					<img src="src/img/flow_02.png" alt="">
 				</div>
