--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<meta name="robots" content="noindex, nofollow, noarchive" />
-
 	<title>ホームDEナース｜保険会社・保険代理店向けオンライン看護相談</title>
 	<meta name="description"
 		content="ホームDEナース法人プランは、保険会社・保険代理店向けのオンライン看護相談サービス。加入者の健康不安を日常で支え、顧客満足・継続率向上、見込み客フォロー、紹介獲得まで自然な流れで後押しします。" />
@@ -17,7 +15,7 @@
 	<meta name="twitter:card" content="summary_large_image" />
 
 	<!-- Canonical -->
-	<link rel="canonical" href="" />
+	<link rel="canonical" href="https://hinatabokko-sato.com/lp-5/" />
 
 	<!-- Font（Zen Maru Gothic） -->
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -28,7 +26,7 @@
 	<!-- Splide -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
 
-	<link rel="stylesheet" href="src/styles.css?ver=08" />
+	<link rel="stylesheet" href="src/styles.css?ver=09" />
 </head>
 
 <body>
@@ -91,10 +89,12 @@
 						<div class="hden-story-block">
 							<div class="hden-story-text">
 								<p>
-									その安心を、<br>日常の中でさらに強くするために。
+									その安心を、日常の中で<br class="sp-only-br">さらに強くするために。
 								</p>
 								<p>
-									保険会社さま、保険代理店さまにとって、“顧客の安心を守ること” は<br>最も大切な使命です。
+									保険会社さま、<br class="sp-only-br">
+									保険代理店さまにとって、<br class="sp-only-br">
+									“顧客の安心を守ること” は<br>最も大切な使命です。
 								</p>
 							</div>
 							<div class="hden-story-image">
@@ -112,7 +112,10 @@
 						<div class="hden-story-block hden-reverse">
 							<div class="hden-story-text">
 								<p>
-									<strong>ホームDEナース法人プラン</strong>は、その使命を日常レベルで実現するための<br>新しいツールです。
+									<strong>ホームDEナース法人プラン</strong>は、<br>
+									その使命を日常レベルで<br class="sp-only-br">
+									実現するための<br class="sp-only-br">
+									新しいツールです。
 								</p>
 							</div>
 							<div class="hden-story-image">
@@ -131,8 +134,11 @@
 							<div class="hden-story-text">
 								<p>
 									保険加入者への付加価値提供、<br>
-									見込み客フォロー、顧客維持、紹介獲得、信頼関係の深化──<br>
-									すべてを自然な流れで高められる仕組みとしてご活用いただけます。
+									見込み客フォロー、顧客維持、<br class="sp-only-br">
+									紹介獲得、信頼関係の深化──<br>
+									すべてを自然な流れで<br class="sp-only-br">
+									高められる仕組みとして<br class="sp-only-br">
+									ご活用いただけます。
 								</p>
 							</div>
 							<div class="hden-story-image">
@@ -158,7 +164,7 @@
 		<!-- WORRIES -->
 		<section class="tp-trouble-section" id="worries">
 			<div class="tp-trouble-header">
-				<h2 class="tp-trouble-title">こんな<span class="tp-txt-orange">お悩み</span>は<br>ありませんか？</h2>
+				<h2 class="tp-trouble-title">こんな<span class="tp-txt-orange">お悩み</span>は<br class="sp-only-br">ありませんか？</h2>
 				<div class="tp-title-wave"></div>
 			</div>
 
@@ -204,7 +210,7 @@
 			</div>
 
 			<div class="tp-trouble-content">
-				<h3 class="tp-content-subtitle">社員・営業スタッフの環境<br class="sp-only-br">について</h3>
+				<h3 class="tp-content-subtitle">社員・営業スタッフの環境<br>について</h3>
 
 				<ul class="tp-trouble-list">
 					<li><span>社員自身が健康や介護の不安を抱えている</span></li>
@@ -230,8 +236,10 @@
 					</h2>
 					<div class="hden-subtitle">とは？</div>
 					<p class="hden-intro-text">
-						自宅から気軽に看護師へ相談できるオンラインサービスです。<br>
-						健康、医療、介護、メンタルなどの悩みに看護師が丁寧に回答し“専属ナースがいるような安心感”を提供します。
+						自宅から気軽に看護師へ相談できる<br class="br-pc">オンラインサービスです。<br>
+						健康、医療、介護、メンタルなどの悩みに<br class="br-pc">
+						看護師が丁寧に回答し<br class="br-pc">
+						“専属ナースがいるような安心感”を提供します。
 					</p>
 				</div>
 
@@ -277,7 +285,7 @@
 				</div>
 
 				<div class="hden-note-area">
-					<div class="hden-note-label">＼ 保険会社さまに選ばれています ／</div>
+					<div class="hden-note-label">＼ 保険会社さまに<br class="sp-only-br">選ばれています ／</div>
 					<div class="hden-note-paper">
 						<p class="hden-note-content">
 							ホームDEナースの利用料金は、<br>
@@ -319,7 +327,7 @@
 							<li class="splide__slide">
 								<div class="tp-service-card">
 									<span class="tp-card-number">02</span>
-									<h3 class="tp-card-title">見込み客の育成・囲い込みが自然に進みます</h3>
+									<h3 class="tp-card-title">見込み客の育成・囲い込みが<br class="br-pc">自然に進みます</h3>
 									<div class="tp-card-body">
 										<ul>
 											<li>無料サービスとして配布すると、見込み客との接点が増えます</li>
@@ -333,7 +341,7 @@
 							<li class="splide__slide">
 								<div class="tp-service-card">
 									<span class="tp-card-number">03</span>
-									<h3 class="tp-card-title">強力な差別化ポイントになり、選ばれる理由が増えます</h3>
+									<h3 class="tp-card-title">強力な差別化ポイントになり、<br class="br-pc">選ばれる理由が増えます</h3>
 									<div class="tp-card-body">
 										<ul>
 											<li>“健康を支える企業”としてブランド価値が高まります</li>
@@ -386,7 +394,7 @@
 						</div>
 						<div class="tp-rec-text bubble-pink">
 							<p class="tp-rec-text-title tp-text-stroke tp-text-stroke--pink">紹介を増やしたい<br>企業さま</p>
-							<p>無償提供サービスが紹介導線になり、口コミが広がりやすくなります。</p>
+							<p>無償提供サービスが紹介導線になり、<br class="br-pc">口コミが広がりやすくなります。</p>
 						</div>
 					</div>
 
@@ -397,15 +405,15 @@
 						</div>
 						<div class="tp-rec-text bubble-green">
 							<p class="tp-rec-text-title tp-text-stroke tp-text-stroke--green">顧客層を広げたい<br>企業さま</p>
-							<p>顧客本人だけでなく、家族・地域全体への価値提供ができます。</p>
+							<p>顧客本人だけでなく、家族・地域全体への<br class="br-pc">価値提供ができます。</p>
 						</div>
 					</div>
 
 					<div class="tp-recommend-last">
 						<div class="tp-rec-text bubble-orange">
-							<p class="tp-rec-text-title tp-text-stroke tp-text-stroke--orange">営業スタッフの負担を<br>減らしたい企業さま
+							<p class="tp-rec-text-title tp-text-stroke tp-text-stroke--orange">営業スタッフの負担を<br class="br-pc">減らしたい<br class="sp-only-br">企業さま
 							</p>
-							<p>医療・健康・介護の相談対応をナースに任せられるので安心です。</p>
+							<p>医療・健康・介護の相談対応を<br class="br-pc">ナースに任せられるので<br class="sp-only-br">安心です。</p>
 						</div>
 					</div>
 
