--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
 		<!-- SP CTA -->
 		<div class="hden-cta-section" id="cta">
 			<div class="hden-cta-header">
-				<div class="hden-cta-label">＼ まずはお気軽にご相談ください ／</div>
+				<div class="hden-cta-label">＼ まずはお気軽に<br class="sp-only-br">ご相談ください ／</div>
 			</div>
 
 			<div class="hden-form-container">
