--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
 			<div class="tp-feedback-container">
 				<div class="tp-review-card">
 					<div class="tp-review-content">
-						<div class="tp-review-label">法人向け保険を扱う代理店さま</div>
+						<div class="tp-review-label">法人向け保険を扱う<br class="sp-only-br">代理店さま</div>
 						<p class="tp-review-quote">「企業への提案の幅が広がり、契約率が上がりました。」</p>
 						<p class="tp-review-text">
 							健康経営に取り組む企業さまに対し、福利厚生サービスとして提案できるようになり、“保険＋付加価値”が評価され契約率が向上しました。
@@ -489,7 +489,7 @@
 
 			<div class="hden-flow-step hden-step-02">
 				<div class="hden-step-num">02</div>
-				<div class="hden-step-text one">ヒアリング<br><span class="hden-step-note">（対象人数・活用目的など）</span></div>
+				<div class="hden-step-text one">ヒアリング<br><span class="hden-step-note">（対象人数<br class="sp-only-br">・活用目的など）</span></div>
 				<div class="hden-step-icon">
 					<img src="src/img/flow_02.png" alt="">
 				</div>
@@ -516,7 +516,7 @@
 
 			<div class="hden-flow-step hden-step-05">
 				<div class="hden-step-num">05</div>
-				<div class="hden-step-text">顧客・見込み客・社員への配布開始</div>
+				<div class="hden-step-text">顧客・見込み客<br class="sp-only-br">・社員への配布開始</div>
 				<div class="hden-step-icon">
 					<img src="src/img/flow_05.png" alt="">
 				</div>
